<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
        android:icon="@drawable/settings_logo"
        android:title="@string/action_settings"
        android:titleCondensed="Settings"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item android:id="@+id/action_retry"
        android:title="@string/action_retry"
        android:titleCondensed="Retry"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item android:id="@+id/action_exit"
        android:icon="@drawable/exit_logo"
        android:title="@string/action_exitApp"
        android:titleCondensed="Exit"
        android:orderInCategory="2"
        app:showAsAction="never"/>
</menu>